--- a/requirements.txt
+++ b/requirements.txt
@@ -20,10 +20,13 @@ django-tables2==2.5.1
 gunicorn==20.1.0
 importlib-metadata==4.13.0
 kombu==5.2.4
+numpy==1.21.6
+pandas==1.3.5
 Pillow==9.4.0
 prompt-toolkit==3.0.36
 psycopg2-binary==2.9.5
 pycparser==2.21
+python-dateutil==2.8.2
 pytz==2022.7
 rabbitmq==0.2.0
 redis==4.4.0
